# rockchip-android-system-keymint

./: Android.bp  Cargo.toml  OWNERS  README.md
boringssl/: Android.bp  Cargo.toml
boringssl/src/: aes.rs  aes_cmac.rs  des.rs  ec.rs  eq.rs  err.rs  hmac.rs  lib.rs  rng.rs  rsa.rs  tests.rs
common/: Android.bp  Cargo.toml  TEST_MAPPING  generated.cddl
common/fuzz/: Cargo.toml
common/fuzz/fuzz_targets/: keyblob.rs
common/src/: crypto.rs  keyblob.rs  lib.rs  tag.rs  wire.rs
common/src/crypto/: aes.rs  des.rs  ec.rs  hmac.rs  rsa.rs  traits.rs
common/src/keyblob/: keyblob.cddl  legacy.rs  sdd_mem.rs  tests.rs
common/src/keyblob/legacy/: tests.rs
common/src/tag/: info.rs  legacy.rs  tests.rs
common/src/tag/info/: tests.rs
common/src/wire/: keymint.rs  secureclock.rs  sharedsecret.rs
derive/: Android.bp  Cargo.toml  TEST_MAPPING
derive/src/: lib.rs
derive/tests/: integration_test.rs
hal/: Android.bp  TEST_MAPPING
hal/src/: env.rs  hal.rs  keymint.rs  lib.rs  rpc.rs  secureclock.rs  sharedsecret.rs  tests.rs
hal/src/hal/: tests.rs
scripts/: cddl-gen
ta/: Android.bp  Cargo.toml  TEST_MAPPING
ta/src/: cert.rs  clock.rs  device.rs  keys.rs  lib.rs  operation.rs  rkp.rs  secret.rs  tests.rs
tests/: Android.bp  Cargo.toml
tests/src/: lib.rs
tests/tests/: keyblob_test.rs
wire/: Android.bp  Cargo.toml
wire/fuzz/: Cargo.toml
wire/fuzz/fuzz_targets/: message.rs
wire/src/: keymint.rs  legacy.rs  lib.rs  rpc.rs  secureclock.rs  sharedsecret.rs  tests.rs  types.rs
