[workspace]
members = [
  "boringssl",
  "common",
  "derive",
  "ta",
  "tests",
  "wire",
]

[patch.crates-io]
kmr-derive = { path = "derive" }
kmr-common = { path = "common" }
kmr-crypto-boring = { path = "boringssl" }
kmr-ta = { path = "ta" }
kmr-tests = { path = "tests" }
kmr-wire = { path = "wire" }
