[package]
name = "kmr-common"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"

[dependencies]
cddl-cat = { version = "^0.6.1", optional = true }
ciborium = { version = "^0.2.0", default-features = false }
ciborium-io = "^0.2.0"
coset = "0.3.2"
enumn = "0.1.4"
kmr-derive = "*"
log = "^0.4"
