[package]
name = "kmr-common"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2021"

[dependencies]
cddl-cat = { version = "^0.6.1", optional = true }
ciborium = { version = "^0.2.0", default-features = false }
ciborium-io = "^0.2.0"
coset = "0.3.3"
der = { version = "^0.6", features = ["alloc", "derive"] }
enumn = "0.1.4"
kmr-derive = "*"
kmr-wire = "*"
log = "^0.4"
pkcs1 = { version = "^0.4", features = ["alloc"] }
pkcs8 = "^0.9"
sec1 = { version = "0.3", features = ["alloc", "der", "pkcs8"] }
spki = { version = "0.6"}
zeroize = { version = "^1.5.6", features = ["alloc", "zeroize_derive"] }
